--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.10.0",
-    "react-countdown-circle-timer": "^3.2.1",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.0.1",
