--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "eslint": "^8.37.0",
     "prettier": "^2.8.7",
+    "react-countdown-circle-timer": "^3.2.1",
     "sass": "^1.62.0"
   }
 }
